--- a/index.html
+++ b/index.html
@@ -1,20 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Angular App!</title>
+    <title>Flapper News</title>
+
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
     <script src="app.js"></script>
   </head>
   <body ng-app="flapperNews" ng-controller="MainCtrl as mainCtrl">
-    <div ng-repeat="post in mainCtrl.posts | orderBy: '-upvotes'">
-      <span ng-click="mainCtrl.incrementUpvotes(post)">^</span>
-      {{ post.title }} - Upvotes: {{ post.upvotes }}
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+
+        <div class="page-header">
+          <h1>Flapper News</h1>
+        </div>
+
+        <div ng-repeat="post in mainCtrl.posts | orderBy: '-upvotes'">
+          <span style="font-size:20px; margin-left:10px;" ng-click="mainCtrl.incrementUpvotes(post)">^</span>
+          <a ng-show="post.link" href="{{ post.link }}">
+            {{ post.title }}
+          </a>
+          <span ng-hide="post.link">
+            {{ post.title }}
+          </span>
+          - upvotes: {{ post.upvotes }}
+        </div>
+        
+        <form style="margin-top:30px;" ng-submit="mainCtrl.addPost()">
+          <h3>Add a new post</h3>
+
+          <div class="form-group">
+            <input class="form-control" type="text" placeholder="Title" name="title" ng-model="mainCtrl.title">
+          </div>
+
+          <div class="form-group">
+            <input class="form-control" type="text" placeholder="Link" name="link" ng-model="mainCtrl.link">
+          </div>
+
+          <button class="btn btn-primary" type="submit" name="submit">Submit Post</button>
+        </form>
+
+      </div>
     </div>
-
-    <form class="" ng-submit="mainCtrl.addPost()">
-      <input type="text" name="postTitle" ng-model="mainCtrl.title">
-      <button type="submit" name="submit">Submit Post</button>
-    </form>
-
   </body>
 </html>
