--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
     <script src="app.js"></script>
   </head>
   <body ng-app="flapperNews" ng-controller="MainCtrl as mainCtrl">
@@ -26,7 +27,7 @@
           </span>
           - upvotes: {{ post.upvotes }}
         </div>
-        
+
         <form style="margin-top:30px;" ng-submit="mainCtrl.addPost()">
           <h3>Add a new post</h3>
 
